// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`roles mapped to a deprecated role logs a deprecation when a role was found that maps to a deprecated custom role from the roles.allow setting 1`] = `
Array [
  Object {
    "correctiveActions": Object {
      "manualSteps": Array [
        "Set \\"xpack.reporting.roles.enabled: false\\" in kibana.yml",
        "Remove \\"xpack.reporting.roles.allow\\" in kibana.yml",
        "Create one or more custom roles that provide Kibana application privileges to reporting features in **Management > Security > Roles**.",
        "Assign the custom role(s) as desired. You may remove the \\"reporting_user\\" role from the user(s) .",
        "Remove the role that grants Reporting privilege from all role mappings and add the custom role. The affected role mappings are: dungeon_master[my_test_reporting_user].",
      ],
    },
    "deprecationType": "feature",
    "documentationUrl": "https://www.elastic.co/guide/en/kibana/current/secure-reporting.html#grant-user-access",
    "level": "warning",
    "message": "Existing roles are mapped to a deprecated role for Reporting privileges",
    "title": "The \\"reporting_user\\" role is deprecated: check role mappings",
  },
]
`;

exports[`roles mapped to a deprecated role logs a deprecation when a role was found that maps to the deprecated reporting_user role 1`] = `
Array [
  Object {
    "correctiveActions": Object {
      "manualSteps": Array [
        "Set \\"xpack.reporting.roles.enabled: false\\" in kibana.yml",
        "Remove \\"xpack.reporting.roles.allow\\" in kibana.yml",
        "Create one or more custom roles that provide Kibana application privileges to reporting features in **Management > Security > Roles**.",
        "Assign the custom role(s) as desired. You may remove the \\"reporting_user\\" role from the user(s) .",
        "Remove the role that grants Reporting privilege from all role mappings and add the custom role. The affected role mappings are: dungeon_master[reporting_user].",
      ],
    },
    "deprecationType": "feature",
    "documentationUrl": "https://www.elastic.co/guide/en/kibana/current/secure-reporting.html#grant-user-access",
    "level": "warning",
    "message": "Existing roles are mapped to a deprecated role for Reporting privileges",
    "title": "The \\"reporting_user\\" role is deprecated: check role mappings",
  },
]
`;

exports[`users assigned to a deprecated role logs a deprecation when a user was found with a deprecated custom role from the roles.allow setting 1`] = `
Array [
  Object {
    "correctiveActions": Object {
      "manualSteps": Array [
        "Set \\"xpack.reporting.roles.enabled: false\\" in kibana.yml",
        "Remove \\"xpack.reporting.roles.allow\\" in kibana.yml",
        "Create one or more custom roles that provide Kibana application privileges to reporting features in **Management > Security > Roles**.",
        "Assign the custom role(s) as desired. You may remove the \\"reporting_user\\" role from the user(s). The affected users are: reportron[my_test_reporting_user].",
      ],
    },
    "deprecationType": "feature",
    "documentationUrl": "https://www.elastic.co/guide/en/kibana/current/secure-reporting.html#grant-user-access",
    "level": "warning",
    "message": "Existing users have their Reporting privilege granted by a deprecated setting.",
    "title": "The \\"reporting_user\\" role is deprecated: check user roles",
  },
]
`;

exports[`users assigned to a deprecated role logs a deprecation when a user was found with a deprecated reporting_user role 1`] = `
Array [
  Object {
    "correctiveActions": Object {
      "manualSteps": Array [
        "Set \\"xpack.reporting.roles.enabled: false\\" in kibana.yml",
        "Remove \\"xpack.reporting.roles.allow\\" in kibana.yml",
        "Create one or more custom roles that provide Kibana application privileges to reporting features in **Management > Security > Roles**.",
        "Assign the custom role(s) as desired. You may remove the \\"reporting_user\\" role from the user(s). The affected users are: reportron[reporting_user].",
      ],
    },
    "deprecationType": "feature",
    "documentationUrl": "https://www.elastic.co/guide/en/kibana/current/secure-reporting.html#grant-user-access",
    "level": "warning",
    "message": "Existing users have their Reporting privilege granted by a deprecated setting.",
    "title": "The \\"reporting_user\\" role is deprecated: check user roles",
  },
]
`;
